feat: more tests

--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "type": "commonjs",
   "types": "types/index.d.ts",
   "scripts": {
-    "lint": "standard --verbose | snazzy",
-    "test": "npm run test:unit && npm run test:typescript",
-    "test:unit": "tap",
-    "test:typescript": "tsd"
+    "test": "c8 --reporter lcov --reporter text node -r @swc-node/register --test test/**/*.test.tsx && tsd",
+    "test:watch": "c8 --reporter lcov --reporter text node -r @swc-node/register --test --watch test/**/*.test.tsx && tsd",
+    "format": "biome format --write .",
+    "lint": "biome check .",
+    "lint:fix": "biome check --apply-unsafe .",
+    "lint:ci": "biome ci ."
   },
   "pre-commit": [
     "lint",
@@ -25,17 +27,22 @@
     "url": "https://github.com/kitajs/fastify-html-plugin/issues"
   },
   "homepage": "https://github.com/kitajs/fastify-html-plugin#readme",
-  "devDependencies": {
-    "@fastify/pre-commit": "^2.0.2",
-    "@types/node": "^20.11.5",
-    "fastify": "^4.0.0-rc.2",
-    "snazzy": "^9.0.0",
-    "standard": "^17.0.0",
-    "tap": "^16.0.0"
-  },
   "dependencies": {
     "@kitajs/html": "^3.0.11",
     "fastify-plugin": "^4.0.0"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "^1.5.2",
+    "@fastify/pre-commit": "^2.0.2",
+    "@swc-node/register": "^1.6.8",
+    "@swc/helpers": "^0.5.3",
+    "@types/jsdom": "^21.1.6",
+    "@types/node": "^20.11.5",
+    "c8": "^9.1.0",
+    "fastify": "^4.0.0-rc.2",
+    "jsdom": "^24.0.0",
+    "tsd": "^0.30.4",
+    "tslib": "^2.6.2"
   },
   "publishConfig": {
     "access": "public"
