--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "types": "types/index.d.ts",
   "scripts": {
     "test": "c8 --reporter lcov --reporter text node -r @swc-node/register --test test/**/*.test.tsx && tsd",
-    "test:watch": "c8 --reporter lcov --reporter text node -r @swc-node/register --test --watch test/**/*.test.tsx && tsd",
+    "test:watch": "c8 --reporter lcov --reporter text node -r @swc-node/register --test --watch test/**/*.test.tsx",
     "format": "biome format --write .",
     "lint": "biome check .",
     "lint:fix": "biome check --apply-unsafe .",
@@ -33,7 +33,6 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.5.2",
-    "@fastify/pre-commit": "^2.0.2",
     "@swc-node/register": "^1.6.8",
     "@swc/helpers": "^0.5.3",
     "@types/jsdom": "^21.1.6",
