--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "commonjs",
   "types": "types/index.d.ts",
   "scripts": {
-    "test": "c8 --reporter lcov --reporter text node -r @swc-node/register --test test/**/*.test.tsx && tsd",
+    "test": "tsd && c8 --reporter lcov --reporter text node -r @swc-node/register --test test/**/*.test.tsx",
     "test:watch": "c8 --reporter lcov --reporter text node -r @swc-node/register --test --watch test/**/*.test.tsx",
     "format": "biome format --write .",
     "lint": "biome check .",
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.5.2",
+    "@fastify/pre-commit": "^2.0.2",
     "@swc-node/register": "^1.6.8",
     "@swc/helpers": "^0.5.3",
     "@types/jsdom": "^21.1.6",
