--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,13 +1,11 @@
 version: 2
 updates:
-  - package-ecosystem: "github-actions"
-    directory: "/"
+  - package-ecosystem: 'npm'
+    directory: './'
     schedule:
-      interval: "monthly"
-    open-pull-requests-limit: 10
+      interval: 'daily'
 
-  - package-ecosystem: "npm"
-    directory: "/"
+  - package-ecosystem: 'github-actions'
+    directory: './'
     schedule:
-      interval: "weekly"
-    open-pull-requests-limit: 10
+      interval: 'monthly'
