style: formatted code

--- a/package.json
+++ b/package.json
@@ -2,28 +2,31 @@
   "name": "@kitajs/fastify-html-plugin",
   "version": "1.0.0",
   "description": "A Fastify plugin to add support for @kitajs/html",
-  "main": "index.js",
-  "type": "commonjs",
-  "types": "types/index.d.ts",
-  "scripts": {
-    "test": "tsd && c8 --reporter lcov --reporter text node -r @swc-node/register --test test/**/*.test.tsx",
-    "test:watch": "c8 --reporter lcov --reporter text node -r @swc-node/register --test --watch test/**/*.test.tsx",
-    "format": "biome format --write .",
-    "lint": "biome check .",
-    "lint:fix": "biome check --apply-unsafe .",
-    "lint:ci": "biome ci ."
+  "homepage": "https://github.com/kitajs/fastify-html-plugin#readme",
+  "bugs": {
+    "url": "https://github.com/kitajs/fastify-html-plugin/issues"
   },
-  "pre-commit": ["lint", "test"],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/kitajs/fastify-html-plugin.git"
   },
-  "author": "Arthur Fiorette <kita@arthur.place>",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/kitajs/fastify-html-plugin/issues"
+  "author": "Arthur Fiorette <kita@arthur.place>",
+  "type": "commonjs",
+  "main": "index.js",
+  "types": "types/index.d.ts",
+  "scripts": {
+    "format": "biome format --write .",
+    "lint": "biome check .",
+    "lint:ci": "biome ci .",
+    "lint:fix": "biome check --apply-unsafe .",
+    "test": "tsd && c8 --reporter lcov --reporter text node -r @swc-node/register --test test/**/*.test.tsx",
+    "test:watch": "c8 --reporter lcov --reporter text node -r @swc-node/register --test --watch test/**/*.test.tsx"
   },
-  "homepage": "https://github.com/kitajs/fastify-html-plugin#readme",
+  "pre-commit": [
+    "lint",
+    "test"
+  ],
   "dependencies": {
     "fastify-plugin": "^4.0.0"
   },
