docs: added example

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.5.2",
+    "@fastify/formbody": "^7.4.0",
     "@swc-node/register": "^1.6.8",
     "@swc/helpers": "^0.5.3",
     "@types/jsdom": "^21.1.6",
@@ -47,5 +48,6 @@
   },
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "packageManager": "pnpm@8.14.1"
 }
