--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,5 +25,8 @@ jobs:
       - name: Install packages
         run: pnpm install --frozen-lockfile
 
+      - name: Lint
+        run: pnpm lint:ci
+
       - name: Test
         run: pnpm test
